--- a/frontend/src/main.sass
+++ b/frontend/src/main.sass
@@ -24,8 +24,8 @@ a:visited
   height: 100%
   width: 100%
   position: fixed
-  top: 40
-  left: 0
+  top: 40px
+  left: 0px
   display: flex
   align-items: center
   align-content: center
@@ -40,6 +40,7 @@ a:visited
   flex-direction: column
   justify-content: center
   width: 80%
+  max-width: 635px
   height: 70%
   border-radius: 30px
   //box-shadow: 1px 4px 30px 0px rgba(50, 50, 50, 0.15)
@@ -57,7 +58,6 @@ header
   #logo
     height: 30px
     display: inline-flex
-  h3
 
 span
   color: $accent_color
